added gridsearch result csv files

--- a/mental.ipynb
+++ b/mental.ipynb
@@ -2377,7 +2377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2500,33 +2500,33 @@
     }
    ],
    "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier, GradientBoostingClassifier\n",
+    "# from sklearn.model_selection import GridSearchCV\n",
+    "# from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier, GradientBoostingClassifier\n",
     "\n",
-    "candidate_models = [LogisticRegression(class_weight='balanced', solver='saga'),RandomForestClassifier(class_weight='balanced'),AdaBoostClassifier(),GradientBoostingClassifier()]\n",
+    "# candidate_models = [LogisticRegression(class_weight='balanced', solver='saga'),RandomForestClassifier(class_weight='balanced'),AdaBoostClassifier(),GradientBoostingClassifier()]\n",
     "\n",
-    "parameters = [{'penalty':['l1','l2','elasticnet']},{'n_estimators':[50, 100, 200],'criterion':['gini','entropy','log_loss'],'max_depth':[None,50,100,200],'ccp_alpha':[0,0.0001,0.001]},{'n_estimators':[50,100,200],'learning_rate':[0.2,0.5,1]},{'learning_rate':[0.1,0.5,0.8],'n_estimators':[50,100,200],'subsample':[0.2,0.6,1]}]\n",
+    "# parameters = [{'penalty':['l1','l2','elasticnet']},{'n_estimators':[50, 100, 200],'criterion':['gini','entropy','log_loss'],'max_depth':[None,50,100,200],'ccp_alpha':[0,0.0001,0.001]},{'n_estimators':[50,100,200],'learning_rate':[0.2,0.5,1]},{'learning_rate':[0.1,0.5,0.8],'n_estimators':[50,100,200],'subsample':[0.2,0.6,1]}]\n",
     "\n",
-    "cv_results = []\n",
+    "# cv_results = []\n",
     "\n",
-    "for i,m in enumerate(candidate_models):\n",
-    "    gcv = GridSearchCV(m,parameters[i], scoring = 'accuracy')\n",
-    "    gcv.fit(X_train, y_train)\n",
-    "    cv_result = gcv.cv_results_\n",
-    "    cv_results.append(cv_result)\n",
+    "# for i,m in enumerate(candidate_models):\n",
+    "#     gcv = GridSearchCV(m,parameters[i], scoring = 'accuracy')\n",
+    "#     gcv.fit(X_train, y_train)\n",
+    "#     cv_result = gcv.cv_results_\n",
+    "#     cv_results.append(cv_result)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(cv_results[0]).to_csv(\"gscv_logistic.csv\")\n",
-    "pd.DataFrame(cv_results[1]).to_csv(\"gscv_rf.csv\")\n",
-    "pd.DataFrame(cv_results[2]).to_csv(\"gscv_ada.csv\")\n",
-    "pd.DataFrame(cv_results[3]).to_csv(\"gscv_gboost.csv\")\n"
+    "# pd.DataFrame(cv_results[0]).to_csv(\"gscv_logistic.csv\")\n",
+    "# pd.DataFrame(cv_results[1]).to_csv(\"gscv_rf.csv\")\n",
+    "# pd.DataFrame(cv_results[2]).to_csv(\"gscv_ada.csv\")\n",
+    "# pd.DataFrame(cv_results[3]).to_csv(\"gscv_gboost.csv\")\n"
    ]
   },
   {
